force-app/main/default/objects/vlocity_cmt__AsyncExecuteJob__e/vlocity_cmt__AsyncExecuteJob__e.object-meta.xml
<CustomObject>
    <description>Controls the creation of Queueable jobs.</description>
    <label>Async Execute Job</label>
    <pluralLabel>Async Execute Jobs</pluralLabel>
</CustomObject>