force-app/main/default/objects/vlocity_cmt__AsyncExecuteJob__e/fields/vlocity_cmt__AsyncProcessId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncProcessId__c</fullName>
    <description>ID of the Async Process record.</description>
    <label>Async Process</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>