force-app/main/default/objects/vlocity_cmt__AsyncExecuteJob__e/fields/vlocity_cmt__JobConfiguration__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__JobConfiguration__c</fullName>
    <description>Job configuration details such as VIP/Apex name and AsyncSetSize.</description>
    <label>Job Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>